--- a/index.html
+++ b/index.html
@@ -3,10 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Design Gallery</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-gap: 20px;
+            padding: 20px 0;
+        }
+        .gallery-item {
+            background-color: #f5f5f5;
+            border-radius: 5px;
+            overflow: hidden;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
+        .gallery-item:hover {
+            transform: translateY(-5px);
+        }
+        .gallery-item img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+        .gallery-item .caption {
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Website</h1>
-    <p>This is the main page of my website hosted on GitHub Pages.</p>
+    <div class="container">
+        <h1>Design Gallery</h1>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="https://via.placeholder.com/250x150" alt="Design 1">
+                <div class="caption">Design 1</div>
+            </div>
+            <div class="gallery-item">
+                <img src="https://via.placeholder.com/250x150" alt="Design 2">
+                <div class="caption">Design 2</div>
+            </div>
+            <div class="gallery-item">
+                <img src="https://via.placeholder.com/250x150" alt="Design 3">
+                <div class="caption">Design 3</div>
+            </div>
+            <!-- Add more gallery items as needed -->
+        </div>
+    </div>
 </body>
 </html>
